Added validation layer, added CORS
Postman requests aren't blocked by cors, so it is ok to enable it now
